# cindy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Justfile  README.md
benches/: database.rs
common/: Cargo.toml
common/src/: api.rs  cache.rs  error.rs  hash.rs  label.rs  lib.rs  mutation.rs  tag.rs
common/src/api/: cache.rs  delete.rs  encoding.rs  get.rs  output.rs  patch.rs  post.rs  query.rs  tests.rs  traits.rs
common/src/cache/: invalidate.rs  value.rs
common/src/tag/: filter.rs  info.rs  predicate.rs  serde.rs  value.rs
docker/: backend.dockerfile  frontend.dockerfile  website.docker
samples/: samples.toml  textfile.md  video1.m4v  video1.ts
src/: api.rs  cindy.rs  cli.rs  command.rs  config.rs  database.rs  gtk.rs  hash.rs  lib.rs  main.rs  media.rs  plugins.rs  server.rs  tag.rs
src/cindy/: command.rs
src/cindy/command/: add.rs  query.rs  tags.rs
src/command/: add.rs  query.rs  serve.rs  tags.rs
src/database/: handlers.rs  schema.sql  tests.rs
src/server/: api.rs  error.rs  frontend.rs  query.rs
src/server/api/: file.rs  query.rs  tags.rs
tests/: api.rs  cli.rs  integration.rs
ui/: Cargo.toml  Justfile  Trunk.toml  index.html
ui/src/: app.rs  cache.rs  component.rs  hooks.rs  main.rs  query.rs  request.rs
ui/src/app/: file.rs  home.rs  settings.rs
ui/src/app/settings/: tag_names.rs  tag_values.rs
ui/src/component/: content.rs  form.rs  icons.rs  inspect.rs  layout.rs  navigation.rs  router.rs  search.rs  search_results.rs  sidebar.rs
website/: config.toml
website/content/: _index.md  releases.md
website/content/docs/: _index.md
website/content/docs/contributing/: _index.md  how-to-contribute.md
website/content/docs/getting-started/: _index.md  introduction.md  quick-start.md
website/content/docs/help/: _index.md  faq.md
