[package]
name = "cindy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", optional = true }
blake2 = "0.10.6"
bytes = "1.4.0"
cindy-common = { path = "./common" }
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive", "env"] }
digest = "0.10.7"
ffmpeg-next = { version = "6.0.0", default-features = false, features = ["codec", "format"], optional = true }
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
include_dir = { version = "0.7.3", optional = true }
mime = "0.3.17"
mime_guess = "2.0.4"
rusqlite = "0.29.0"
serde = { version = "1.0.171", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
tokio-util = { version = "0.7.8", features = ["io"] }
serde_qs = { version = "0.12.0", features = ["axum"] }
reflink = { version = "0.1.3", optional = true }

[dev-dependencies]
async-trait = "0.1.72"
hyper = "0.14.27"
proptest = "1.2.0"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
tempfile = "3.6.0"
tower = "0.4.13"

[features]
default = ["ffmpeg", "server", "reflink"]
ffmpeg = ["dep:ffmpeg-next"]
server = ["dep:axum", "dep:include_dir"]
reflink = ["dep:reflink"]

[workspace]
members = [".", "common"]
