[package]
name = "cindy-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
derive_more = "0.99.17"
enum-kinds = "0.5.1"
hex = "0.4.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_qs = "0.12.0"
thiserror = "1.0.44"
restless = { git = "https://github.com/xfbs/restless", version = "0.1.0", features = ["qs", "json"] }

[dev-dependencies]
anyhow = "1.0.72"
serde_test = "1.0.175"
